--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "author": "chunza2542",
   "dependencies": {
+    "-": "^0.0.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
@@ -27,6 +28,7 @@
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
     "d3": "^7.0.0",
+    "ethers": "^5.5.2",
     "fuse.js": "^6.4.6",
     "js-search": "^2.0.0",
     "react": "^17.0.2",
@@ -36,6 +38,7 @@
     "react-modal": "^3.14.3",
     "react-scripts": "4.0.3",
     "react-slider": "^1.3.1",
+    "s": "^1.0.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.0.1"
