--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "uniswapcalculator",
   "version": "1.0.0",
   "author": "chunza2542",
+  "homepage": ".",
   "dependencies": {
     "-": "^0.0.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -13,6 +14,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@thanpolas/univ3prices": "^3.0.2",
     "@types/axios": "^0.14.0",
     "@types/bignumber.js": "^5.0.0",
     "@types/d3": "^7.0.0",
@@ -25,6 +27,7 @@
     "@types/react-modal": "^3.12.1",
     "@types/react-slider": "^1.3.1",
     "@types/styled-components": "^5.1.11",
+    "@uniswap/v3-sdk": "^3.6.3",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
     "d3": "^7.0.0",
@@ -47,8 +50,10 @@
     "generate-token-image-uri-mapping": "node ./scripts/generateTokenImageURI.js",
     "generate-contract-address-mapping": "node ./scripts/generateTokenAddressMaping.js",
     "generate": "yarn generate-token-image-uri-mapping && yarn generate-contract-address-mapping",
-    "start": "yarn generate && react-scripts start",
-    "build": "yarn generate && react-scripts build",
+    "start-old": "yarn generate && react-scripts start",
+    "start": "react-scripts start",
+    "build-old": "yarn generate && react-scripts build",
+    "build": "react-scripts build",
     "deploy": "react-scripts build && firebase deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
